classDiagram
    class User {
        +UUID id
        +String password
        +DateTime last_login
        +Boolean is_superuser
        +String first_name
        +String last_name
        +Boolean is_staff
        +Boolean is_active
        +DateTime date_joined
        +String email
        +String full_name
        +String phone
    }

    class Profile {
        +String id
        +String first_name
        +String last_name
        +Date birthday
        +String phone
        +String avatar_url
        +Role role
        +DateTime created_at
        +DateTime updated_at
        +User user
    }

    class ProfessionalUser {
        +String id
        +String name
        +StatusJuridique status_juridique
        +Area domaine
        +Prestation service_types
        +Number tjm_cents
        +String number_pro
        +DateTime created_at
        +DateTime updated_at
    }

    class Area {
        +String id
        +String name
    }

    class StatusJuridique {
        +String id
        +String name
    }

    class Prestation {
        +String id
        +String name
    }

    class Role {
        +String id
        +String name
    }

    User "1" -- "1" Profile : has one
    User "1" -- "1" ProfessionalUser : has one
    Profile "1" -- "1" Role : has one
    Profile "1" -- "1" User : has one
    ProfessionalUser "1" -- "1" StatusJuridique : has one
    ProfessionalUser "1" -- "1" Area : has one
